ontol/ontol-compiler/test-cases/error/map/equation_x_plus_x.on
// TODO: It should be able to divide by 2?

def foo (rel* 'a': i64)
def bar (rel* 'a': i64)
map(
    foo(
        'a':
            x // ERROR unsupported variable duplication. Try to simplify the expression
            +
            x // ERROR unsupported variable duplication. Try to simplify the expression
    ),
    bar(
        'a': x
    )
)
